itegrate scheduler to service
